--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ with desktop publishing software like Aldus PageMaker including versions of Lore
                         </div>
 
                         <div class="col-md-4 col-sm-4 about_img">
-                            <figure><img src="image/nadia.jpg" alt="" /></figure>
+                            <figure><img src="image/n.jpg" alt="" /></figure>
                         </div>
                         
                     <div class="col-md-3 col-sm-3" id="content-desktop">
@@ -408,7 +408,7 @@ with desktop publishing software like Aldus PageMaker including versions of Lore
                         <center>   
                         <div class="col-sm-6 col-xs-6 full-wdth col-md-3 team" style="margin-left: 10%;" id="content-desktop">
                             <figure>
-                                <a href=""><img src="image/nadia1.jpg" alt=""/></a>
+                                <a href=""><img src="image/n.jpg" alt=""/></a>
                                 <div class="innner_lay">
                                     <a href=""><i class="fa fa-calendar"></i></a>
                                 </div>
@@ -422,7 +422,7 @@ with desktop publishing software like Aldus PageMaker including versions of Lore
                      <center>   
                         <div class="col-sm-6 col-xs-6 full-wdth col-md-3 team" id="content-mobile">
                             <figure>
-                                <a href=""><img src="image/nadia1.jpg" alt=""/></a>
+                                <a href=""><img src="image/n.jpg" alt=""/></a>
                                 <div class="innner_lay">
                                     <a href=""><i class="fa fa-calendar"></i></a>
                                 </div>
